# ChangeLog for dev-python/hacking
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/hacking/ChangeLog,v 1.13 2014/11/24 21:14:59 pacho Exp $

  24 Nov 2014; Pacho Ramos <pacho@gentoo.org> hacking-0.9.2.ebuild:
  Support python 3.4

  01 Aug 2014; Matthew Thode <prometheanfire@gentoo.org> -hacking-0.5.6.ebuild,
  -hacking-0.7.2-r1.ebuild, -hacking-0.8.0-r1.ebuild, -hacking-0.8.0.ebuild:
  out with the old and, well, that's about it really

*hacking-0.9.2 (07 Jul 2014)

  07 Jul 2014; Ian Delaney <idella4@gentoo.org> +hacking-0.9.2.ebuild:
  update deps, add missed IUSE doc, update DEPs accirdingly, add 'fix' to error
  in conf.py re oslo-sphinx, update test phase

*hacking-0.8.1 (19 Apr 2014)

  19 Apr 2014; Ian Delaney <idella4@gentoo.org> +hacking-0.8.1.ebuild:
  bump; upstream have dropped py3.2 support and added py3.3 support

*hacking-0.5.6 (30 Mar 2014)

  30 Mar 2014; Michał Górny <mgorny@gentoo.org> +hacking-0.5.6.ebuild:
  Restore old (without py2.6 though) since it is required by OpenStack packages.

  30 Mar 2014; Michał Górny <mgorny@gentoo.org> -hacking-0.5.6.ebuild:
  Drop old since it requires dev-python/pbr w/ py2.6 support that was removed.

  19 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org> hacking-0.7.2-r1.ebuild,
  hacking-0.8.0-r1.ebuild:
  Keyword ~amd64-linux ~x86-linux

  19 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org> hacking-0.8.0-r1.ebuild:
  Keyword amd64-linux and x86-linux

*hacking-0.7.2-r1 (02 Jan 2014)
*hacking-0.8.0-r1 (02 Jan 2014)

  02 Jan 2014; Ian Delaney <idella4@gentoo.org> +hacking-0.7.2-r1.ebuild,
  +hacking-0.8.0-r1.ebuild, -hacking-0.7.2.ebuild:
  revbumps; 0.7.2-r1; add 1 missing test dep, tidy up, both; Add py3.2 support,
  upgrade test phase with upstream bug added for fails under py3, remove only
  old 0.7.2 for now

  02 Jan 2014; Ian Delaney <idella4@gentoo.org> hacking-0.8.0.ebuild:
  correct 1 char white space

*hacking-0.8.0 (02 Jan 2014)
