@@ -1,16 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST hacking-0.10.1.tar.gz 39768 SHA256 ab5dd17d927f0f980e759a33454e2471587e5650be48222f35f79996f472c016 SHA512 46529b33c4e6ac6e379d6c69d26650d31968c5e9c8313e525abc62966b1317aac9b99ef09b57ab30b8b43e63f3f55e6fe3175bd68f18433c9a29dfdadda1d945 WHIRLPOOL ac5360643b5f9133bbd7677472156b6a69d926288e24f7694641d06afaec33c7faf204bf78e56d5143b37d0fd5667700a55e9d3f00074567a2dd3c69cad3dfac
 DIST hacking-0.8.1.tar.gz 51800 SHA256 65390ea60215e4222d9ddbc1241a0f3e05644e4f55b305e69755ed8eab3decb5 SHA512 9055d57dd39bc1653cd7c8773ea4ca7f9b206e8495c137570c3456dab45373b51d6f25dcd4413b5f78b7c4740f5c89d21534ee982dee542c7674bd825c96b91a WHIRLPOOL d35e577c0790fe989a2141264afe67b4d1478bf2f08edcbea62515764e10938f364f5d57b3d8d66dba2125246c9eb1afc2a9b67ad4d91bb6d1346eb382a420ac
 DIST hacking-0.9.2.tar.gz 43956 SHA256 2a584e5bf185ee19517d4e72a852b729578aab3822ae345534e1f35338582ba4 SHA512 76aa59b4cdfb8036d6471e35cba43d502de3a72edc3883a05822063cbb92eaa072cef3144d21ee82ac763c3385c65bc9dec4b66fda5a5a2090191ba5b6388d41 WHIRLPOOL 718d790fdc0a405166f3ff194bcfa4d68cb311557eb092630716a14018aca7ac94e43f3305fd66195dbd15c35322c8a9bf25e9dd08ac5ff1964800c140ddf17f
+EBUILD hacking-0.10.1.ebuild 2160 SHA256 a268adf75aa12c864cd7c5c8d774e2d57610d1bc1a95e30f737eddc569d093d8 SHA512 15fac913664a2d9fc3b52487203ef4c5c9d9839dc95f66aaf50345fb20ed4872c7772ef1feb3fee25ac89a09657c208d0ff7b292787f4e726772debba371b58f WHIRLPOOL 3862bde421e3d8d83291d521a19b936eca84d056ec681015fd3dc68465b25aed86155f3f9258b51aa4dadf921dc521c18763c3695ad80f7e5341f1b357725e37
 EBUILD hacking-0.8.1.ebuild 2082 SHA256 f3f35ec1d1ebcf63968f0bc82dda4d6633685d246293db3c743c7f909d2fa4d7 SHA512 fae5e08cd8fa9da5149f25fbf39b33e673cebf5db15669b3f9a01be3f604f64265ad0fefca8590ecb02558db713d20e9030472af97481c0304c60ac2966b2e12 WHIRLPOOL 247f336a625a8232d7c6a5170cac75d39b128b698ef37a44aca67971252a5f43619d2a3797e33cd9927aae0816a6aba8c939f4ce26c1336bdbd32a838cf903ea
 EBUILD hacking-0.9.2.ebuild 2051 SHA256 25c2e53bc3d611dc35a1b469dc113a79b2b0ca5dee0bdabc9f7db38d89745fcf SHA512 f6ff7ee780e92079cd395c5ee8f93ff436e56d788b3a569f42536c44fe7d0758a2c583ea59c3c8fc9f13302edbe1d6d5027864ee73bc44da2a92c0eaa5de26cb WHIRLPOOL 1c7d3b5f4b9d4faeeb873bbce7505c3e3c0d7905a6f177d8a3a903cf627fb58444a85ba2f56862f8a83da57afaddaff328d360bfae7e77da3de570462ce63ac2
-MISC ChangeLog 2557 SHA256 d78fd72be12343f65c49e45b19beed2490bcb120d6a3d1c94d13f3376ec481d3 SHA512 212e5884c27814af6a307992fb44b2084cf310aa81e5bc66adb5ec10ab67ce71c935486a0d80b529a0a6e85f440d5165d8f533e5eebb756ce061ebee77fe40a4 WHIRLPOOL 0fd858607628ad6ab2b74135600dddb87eaf7db453525d4fff772e1efa302226b4e53b92cb4b768ae4a69cab0ac8210a7d5da8c8e2e28e69c6521cf7a72e6417
+MISC ChangeLog 2745 SHA256 e2736f7036f6e795b1e376c34311a9130b156158298980843eb40cfbfb1f5b16 SHA512 244d50a5d3a97fb1f892f6a51cc6be3bd8c067730a296139e3d88fb53f56e865cccea7a76e3f7f1f952cad5f1e602984332e14db72e4f7d633f5ec6b8e114d21 WHIRLPOOL 585620af30db05ba5057acc08e22f43262f65111b864808ffd6b42e9ca79ab62b3dd434d683b3a1666ab746b670a3930d8168dc0b6aaca2d2d23dde4b3b1ef03
 MISC metadata.xml 453 SHA256 79d7c622c93da6df217bcdf2e0339b1e3beee44ee084fccd8dee749a7d35e163 SHA512 0437615ec17d8536e8ef50d80f41db35b570e98e5b2e40dd08d1f37556edbf0a62396b7268398ba3b6a0eced6f0ee9fa40974ad54550fc39c5516f8286da2eba WHIRLPOOL 6b200039468f573d5640b2515a05c0f8799a77c5be34486e916df5d73cd3f207268a3e7e6294bee2bffe7bb52427c07c4109cf82c3a01b6daf0dd9097eba8037
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlRzn9QACgkQCaWpQKGI+9Ro3QCeOjgn5Z9w3Qh7hE2hJcYJnulz
-ya4An2vlU1yjojPciefgt6czCJvJCaRz
-=cbKE
+iQIcBAEBCAAGBQJU4lHzAAoJEGSje+quGaTooQcP/iquQUvVmxiBEmQwOWUuN673
+eyHjC8sGWyJ4ZqbwWHy5klTBJdphvM+W4Z0h7O1DP2oIJySOX5r1bmNFyp0JxAGH
+cfrrykscOkWK7JhknBkBDRI4fQg9CwnDqW4kcPBwpsLBX5ktNeqXK/n5aRewy29F
+trknbZE8tBQCjpCl4p4agLiax/PkpceMLXfcydJhYUzyZqGVlPFpGDLzNi23UlK1
+1BPollpV3kVoNxiX6fuWdsaq43Ffhya7DoUZO3HKewIMa502z6enMbt3DvKBZPcI
+5dWpWIBmIQ/bRE4fPb7E7OwCN88ajQoms2FCS5oBUi9B6o0t7Pm9nzXJbUtjsw3d
+Va/TMvEGHkPfxSV2VDeolkpLOE2mVhq2V763iPTN6i2zMLJ0zQhVcRzvhe6C+fVo
+i0+8TbEsUt7uezMWb2VnZCR3+5sSbldOBBpd0ya3jTwOPdEemUEyItmyyKe6Jymk
+O5FLF7RLXq1sqeTzgtwwnONGJrB1UFSItrmx7aJX715ReRu1n7oJj/J/WC6VfWRp
+mjo59I+zsIkwXVbVzMQaDtAAiOOmZAh/o9YC9DbnONHWudKcmgMs9T6DbKuQ+hdZ
+uvSAaqICYly0xA5NOGC5c4I4sc+BzfHj5VWDh+1MBguSw6W+VCosOTkV9cdr430T
+Fjrxspe988MucVlMFIP3
+=r69e
 -----END PGP SIGNATURE-----
