@@ -2,23 +2,25 @@
 Hash: SHA256
 
 DIST oslo.serialization-1.0.0.tar.gz 16242 SHA256 f9748cfbce1cb2a48942f12cf64a558f607135cddd610dadef8a036aa879063c SHA512 5cde309368b61f7fbf4ea6ece4c7e26bb1c43f4eb96adee8aea89810d81d0b112a1d8443b658f6d25558c0e9071b55ba81ddbea608bc51459afb3704ac9bd78b WHIRLPOOL 2c7dc9223e23d8df3e5ac0c3962ca1d8f66c3bf1f67943274aefc03245f65d312ab33353ea3dc8b63a748a785524b1e5a846361965f2c381fcec90dff51becd4
+DIST oslo.serialization-1.3.0.tar.gz 22586 SHA256 6d5b0f8a0bdb59a7818e62c4c85c4f1ea81f634f2add368b553c93a5c4f28e93 SHA512 47db8850d8f3111e5dd0ef7d506cd629ba36d0996487dfe80256557f505d66accbc83131d6066e323eec85f1b9b22776c4a351372e50ab66e059c89a61f8ad16 WHIRLPOOL b4a9889a66c96da0f43f40cf7647da4ea848ec408192170eefe9f3d8cea435eacd5d5e55e2d4701b961b6819147faed82189f3e90cc3e33b1766b014bdc3aa5b
 EBUILD oslo-serialization-1.0.0.ebuild 2065 SHA256 3c3d9d84957e4952358776498ce3140803558bf37660ac91546af096ecf21336 SHA512 36fde4fec58267112d900a897a914b14477df3ab8abdcebc9f1106c9948be813a10e4c5f3e503031a981b91512f49806e424b2a4c1a0855b0f15d14ff646aabc WHIRLPOOL e15c676a734650dfaa2b376d537219840d1ffcddb64f4123622bcfcc35eda12074fba4e6cc292dac59b61cd3064c16938190d9dcc272978b6679477e797f4c5f
-MISC ChangeLog 402 SHA256 0799bf9462cc8b0c66a8a49dbea01eda4b9f8c23fcecc55a6ebda2138511d240 SHA512 99217c9e6c9d34918f86a5988ca2c96c308c547d95514cbca7dbb8a8bf0adb437325de22ed6b24429c5cf8ffba796bfb2d6335369514c80229c9fc886c4fe383 WHIRLPOOL 0983da74dcd553bae0d6a7749ecf7d817e39739a4ae6e36ed40b46e07d30eb6bf1e7b71af109776466bfdf7b81dd58717bb0fdd1e98c6497a30d7f3a6343848c
+EBUILD oslo-serialization-1.3.0.ebuild 2256 SHA256 b4f04b4cbfd4d64af139918d5c07e385f157d955a5bde604a5c34be488adca8f SHA512 505b17db5e8cf3a9208cd9265547599a0f207778c925481c527bb1550f7b2d674eb8737b67affa9596821eea67ef20615ea1a808cdfff429097de55987914eb7 WHIRLPOOL 3541ca9770c3bdc64c92a2417daf9ae8a9db16f37921547cb6b0124d8be6b62d2849a42481bc4f54c9a4635a27449da0b333143671a5011b97eac718b07d4068
+MISC ChangeLog 548 SHA256 9bdc00143d29450f757550839fbbf8afd2614ee51d1a06e813b7468a9c4beda3 SHA512 f32e30b8c7aac2cccdd724e474537c198eaca27e9c9da04b2d6d5206f23f7acbd9895c90665c11df09aa640cf2963208b577831799022a100db72a441d321650 WHIRLPOOL 46555943d407b8474f00da6cb81153f95a969bc5f09d39c1e3f7f18fe9a974b19ae46cfb5539b9e2df8956b13a617424debe516ffd332028368d73d390e198db
 MISC metadata.xml 305 SHA256 1095811fca07655f61d7ca88246a11e61ad91cda0ff9d487758ef9deb9e21ef9 SHA512 94c6701b6234c8268e50c9642c45dedade70653ee0d32d46c3626566473e1cacf06dfe0dd67159401ff1453cf6b13baa803c06eb4df55591660ccfbf6c3fd9d8 WHIRLPOOL 3c3c266b82993b29e6f64f247f641c911450cdb4e73f9adc2a22159a986240413cf297fe8afd396da1ee4cc3ce868a3aedb07e77b4600b454f632092b3db987b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUX5huAAoJECZUyt4RqCF8JGAP/ApRDcNdD8uUwGO5iWwGy+9Y
-l9noK8K8vW+7Q5/DZOBU7LVlyLk58qEsCNIpkuRYvNqOWHxS4DWC4y+E7m3AREal
-cNPfWdPaFULaQOxknOJ0ap7amf5HoaxIemeZhd24F41mh/joelKQyZ9ezVjBehLe
-m9SfcZzdA/0Lc7CGSGjGDlzELk3FX/ifD06+q2/dkrtaYYIlRpoPCnqBKt7q/z+a
-R+eDD5DZ/oC/akalYb17UnhYh19b5Z2eeka0YGnwFg5jTOOU9sVnUOP5Eytcj2mR
-EvwTbKOVm59HW5u3Q5Dg6/FND/xO3IMD92rvq7PeZZm4oTlkxKIYAR9dk7E7p953
-wF5cam8IJGIpz5DOjK+4oplmYMlZUUowjfRmmvkQ+YbGclcjXLvml3qxMoWkXujA
-dLtzg1iRR1dosuV/i1qs7B4fV6Cxeu6GXwMuMa63trMUN1+Eko6TVI2onHfPLk95
-49bgkONxWKmg7in93awsuWCRNUVseTXP6yablkhE/orDOew2hjt446RE4cwpmxEy
-8OAJ5M4rFnUsEKCqEy0pE85btMYjRZQzUcF+6YXH8x/HGFHSKFqrTBYM0AZzZFTX
-NTx5mm1VkUlegR/lmZXMQGQwf7Y1p5TKtF/JKDqEtY9gVEoelcA7cJqlb3NVIX7G
-fPF1Yki3rzdltu6DprJk
-=KEP3
+iQIcBAEBCAAGBQJU4lIPAAoJEGSje+quGaToTYEP/iQP/sDgFU/GijmXMsHqZlNT
+uAXBQrYb+dVR8M4aUthQF0GxGu6y9Qm0kI7eJNp8diWeF+cmqQjdptR0xuRB0N27
+vwHWPNMOx3AHl214JVbCWf41akbubgfwaPgSZydnzLmoUEjU9TzFEoULJOGcno2n
+rn/ZOKV4Y5AMt4c4x3E7+PrCYqZj/0oFh67lH9ysiJsEJOVNyiFbEgFVdHFPELif
+2Z2tnj5pMmv1Pbw3O/SR+S4FTG28304ENkW+hM6OvUV/CU9GQjJWQGW/A54x81HH
+ccxfoAbXkhziehm+76x2XdLQZvX4k4zIemea/Xrojvyg1ZB1XznsWRpMgA/Brtfy
+jVAyYmM66p6B77J/4U5e1aTruBYm2IFtoWlw+u0klqq7NI81AEmnW22/xkp0/GtO
+tCVEyOaB/bObQtLvm6caEYYbZJIX+lx0ZkT2r80A5e+CUfgqtvbD2QEN9NO4ETs2
+JM2Io/UDdPzIaD6MNGNUce1cWHEu5GjeY5GIerPXTDk0W8Zg5jvlO1Ky9aA2DwLH
+FLX4Pylxyi1+PRyh5d7lkMfr2JFMlXPSxKerVZdrZl2Yp3d5Qoc6HynreTbDtJ7Y
+TIB0TCPJDT5cGg9kYSf2/CGc9jXLjZ6fsK0l8tWC3dJxVNofP0CONt2TRUiPZ1+I
++mwEu9DutajkwTz6ca+3
+=2yYR
 -----END PGP SIGNATURE-----
