@@ -1,10 +1,15 @@
 # ChangeLog for dev-python/oslo-serialization
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/oslo-serialization/ChangeLog,v 1.1 2014/11/09 16:38:05 alunduil Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/oslo-serialization/ChangeLog,v 1.2 2015/02/16 20:24:13 prometheanfire Exp $
+
+*oslo-serialization-1.3.0 (16 Feb 2015)
+
+  16 Feb 2015; Matthew Thode <prometheanfire@gentoo.org>
+  +oslo-serialization-1.3.0.ebuild:
+  bup
 
 *oslo-serialization-1.0.0 (09 Nov 2014)
 
   09 Nov 2014; Alex Brandt <alunduil@gentoo.org>
   +oslo-serialization-1.0.0.ebuild, +metadata.xml:
   add ebuild written by me
-
