@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/hacking
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/hacking/ChangeLog,v 1.13 2014/11/24 21:14:59 pacho Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/hacking/ChangeLog,v 1.14 2015/02/16 20:23:45 prometheanfire Exp $
+
+*hacking-0.10.1 (16 Feb 2015)
+
+  16 Feb 2015; Matthew Thode <prometheanfire@gentoo.org> +hacking-0.10.1.ebuild:
+  new hacking, we'll see how it likes a diferent flake8 though...
 
   24 Nov 2014; Pacho Ramos <pacho@gentoo.org> hacking-0.9.2.ebuild:
   Support python 3.4
